--- a/pages/generative-and-rag/simple-rag-with-generative-search.mdx
+++ b/pages/generative-and-rag/simple-rag-with-generative-search.mdx
@@ -2,7 +2,7 @@ import { Tabs } from "nextra/components"
 
 # Simple Rag With Generative Search
 
-Use AI to generate meaningful insights and summaries from your documents by applying natural language prompts to individual documents or across multiple documents.
+Use AI to generate meaningful insights and summaries from your documents using Retrieval-Augmented Generation (RAG). Apply natural language prompts to individual documents or across multiple sources to extract relevant information and create context-aware responses.
 
 ## Generate from single document
 Transform a single document into an AI-generated response by providing a prompt that can reference any of the document's properties using curly braces notation.
@@ -10,12 +10,14 @@ Transform a single document into an AI-generated response by providing a prompt 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
-    const data = await unbody.get.textDocument
-        .where({ mimeType: "application/pdf" })
-        .generate
-        .fromOne("Summarize this: {text}")
-        .select("title", "originalName")
-        .exec();
+    const {
+      data: { payload },
+    }  = await unbody.get.textDocument
+          .where({ mimeType: "application/pdf" })
+          .generate
+          .fromOne("Summarize this: {text}")
+          .select("title", "originalName")
+          .exec();
     ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -81,26 +83,28 @@ Transform a single document into an AI-generated response by providing a prompt 
 ```
 
 ## Generate from single document with options
-Generate content from a single document with additional configuration options like model selection and generation parameters.
+Generate content from a single document with additional configuration options. Customize the output by adjusting temperature (0-1), token limits, model selection, and presence/frequency penalties.
 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
-    const data = await unbody.get.textDocument
-        .where({ mimeType: "text/markdown" })
-        .generate.fromOne({
-            prompt: "Create a short report for these: {text}",
-            options: {
-                model: "gpt-4",
-                topP: 0.7,
-                maxTokens: 1000,
-                temperature: 0.7,
-                presencePenalty: 0,
-                frequencyPenalty: 0,
-            },
-        })
-        .select("originalName")
-        .exec();
+    const {
+      data: { payload },
+    }   = await unbody.get.textDocument
+            .where({ mimeType: "text/markdown" })
+            .generate.fromOne({
+                prompt: "Create a short report for these: {text}",
+                options: {
+                    model: "gpt-4",
+                    topP: 0.7,
+                    maxTokens: 1000,
+                    temperature: 0.7,
+                    presencePenalty: 0,
+                    frequencyPenalty: 0,
+                },
+            })
+            .select("originalName")
+            .exec();
     ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -177,11 +181,13 @@ Create a unified AI-generated response from multiple documents by specifying whi
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
-    const data = await unbody.get.textDocument
-        .generate
-        .fromMany("Create a 100 words summary:", ["text", "title"])
-        .select("title", "originalName")
-        .exec();
+    const {
+      data: { payload },
+    } = await unbody.get.textDocument
+          .generate
+          .fromMany("Create a 100 words summary:", ["text", "title"])
+          .select("title", "originalName")
+          .exec();
     ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -247,22 +253,24 @@ Generate content from multiple documents with additional configuration options f
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
-    const data = await unbody.get.textDocument
-        .where({ mimeType: "text/markdown" })
-        .generate.fromMany({
-            task: "Write a short report based on these topics:",
-            properties: ["title", "text", "tags"],
-            options: {
-                model: "gpt-4",
-                topP: 0.7,
-                maxTokens: 1000,
-                temperature: 0.7,
-                presencePenalty: 0,
-                frequencyPenalty: 0,
-            },
-        })
-        .select("originalName", "title")
-        .exec();
+    const {
+      data: { payload },
+    } = await unbody.get.textDocument
+          .where({ mimeType: "text/markdown" })
+          .generate.fromMany({
+              task: "Write a short report based on these topics:",
+              properties: ["title", "text", "tags"],
+              options: {
+                  model: "gpt-4",
+                  topP: 0.7,
+                  maxTokens: 1000,
+                  temperature: 0.7,
+                  presencePenalty: 0,
+                  frequencyPenalty: 0,
+              },
+          })
+          .select("originalName", "title")
+          .exec();
     ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -336,4 +344,4 @@ Generate content from multiple documents with additional configuration options f
 ]
 ```
 
-Learn more about advanced generation features in our [Advanced Generation Guide](/guides/advanced-generation).
+Learn more about advanced generation features in our [Generative Search Guide](/content-api/generative).
