feat: faq generator

--- a/pages/enhancement/build-custom-enhancement-pipeline/image-metadata-extraction-pipeline.mdx
+++ b/pages/enhancement/build-custom-enhancement-pipeline/image-metadata-extraction-pipeline.mdx
@@ -17,7 +17,7 @@ const imageEnhancementPipeline = new Enhancement.Pipeline(
 
 ## Configuring Metadata Extraction Step
 
-This step creates a sophisticated metadata extraction process using Zod for structured output and OpenAI's GPT-4o for intelligent image analysis:
+This step creates a sophisticated metadata extraction process using [Zod](https://zod.dev/) for structured output and OpenAI's GPT-4o for intelligent image analysis:
 ```tsx
 const extractImageInfo = new Enhancement.Step(
   "extract_image_info",
